# hydra-ai

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: coordinator.yml  pages.yml  release-tag.yml  worker.yml
.serena/: project.yml
.serena/memories/: session-2026-07-10-streaming-selfupdate-reasoning.md
coordinator/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  mix.exs
coordinator/assets/: styles.css
coordinator/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
coordinator/lib/: coordinator.ex
coordinator/lib/coordinator/: api_router.ex  api_token.ex  api_tokens.ex  application.ex  device_auth.ex  endpoint.ex  job.ex  jobs.ex  join_auth.ex  lease_worker.ex  open_api.ex  presence.ex  release.ex  repo.ex  router.ex  secret_guard.ex  stats.ex  worker.ex  worker_channel.ex  worker_key.ex  worker_policies.ex  worker_registry.ex  worker_session.ex  worker_socket.ex
coordinator/lib/coordinator/jobs/: job_record.ex
coordinator/lib/coordinator/web/: admin_auth.ex  admin_layout.ex  auth_controller.ex  dashboard_controller.ex  router.ex  site_controller.ex  token_controller.ex  worker_controller.ex
coordinator/priv/repo/migrations/: 20260626000001_init.exs  20260628000001_worker_keys.exs  20260701000001_api_tokens.exs  20260702000001_worker_key_policy.exs
coordinator/priv/site/: tailwind.css
coordinator/scripts/: curl_smoke.sh  stress.sh  stress_jobs.exs  stress_jobs.sh  stress_openai.sh
coordinator/test/: api_router_test.exs  api_tokens_test.exs  coordinator_test.exs  device_auth_test.exs  integration_test.exs  jobs_test.exs  join_auth_test.exs  router_test.exs  secret_guard_test.exs  stats_test.exs  test_helper.exs  web_router_test.exs  worker_channel_test.exs  worker_session_test.exs
docs/: index.html
docs/src/: styles.css
proto/: README.md  job.schema.json  job_result.schema.json  job_result_chunk.schema.json  registration.schema.json  usage_report.schema.json
scripts/: setup-opencode.sh
worker/: Cargo.toml  README.md
worker/crates/worker-app/: Cargo.toml  SETUP.md  tauri.conf.json
worker/crates/worker-app/capabilities/: default.json
worker/crates/worker-app/icons/: README.md  icon.icns
worker/crates/worker-app/src/: main.rs
worker/crates/worker-cli/: Cargo.toml
worker/crates/worker-cli/src/: main.rs
worker/crates/worker-core/: Cargo.toml
worker/crates/worker-core/src/: adapter.rs  bootstrap.rs  config.rs  coordinator_client.rs  error.rs  gateway.rs  identity.rs  lib.rs  limits.rs  oauth.rs  privacy.rs  registration.rs  runtime.rs  self_update.rs  types.rs  usage.rs  vault.rs  worker_run.rs
worker/crates/worker-core/src/adapters/: anthropic.rs  gemini.rs  gemini_oauth.rs  local_openai.rs  mod.rs  ollama.rs  openai_chatgpt.rs  openai_compatible.rs  tools.rs
worker/crates/worker-core/tests/: adapters.rs  gateway.rs
worker/crates/worker-tauri/: Cargo.toml
worker/crates/worker-tauri/src/: commands.rs  dto.rs  lib.rs  runner.rs  support.rs
worker/scripts/: test-worker-opencode.sh
worker/ui/: README.md  index.html  main.js  styles.css
