[workspace]
resolver = "2"
members = [
    "crates/worker-core",
    "crates/worker-cli",
    "crates/worker-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
keyring = "3"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sysinfo = "0.32"
directories = "5"
clap = { version = "4", features = ["derive"] }
