[workspace]
resolver = "2"
members = [
    "crates/worker-core",
    "crates/worker-cli",
    "crates/worker-tauri",
]
# The desktop app links the Tauri/webkit runtime, which needs system GUI libs
# (webkit2gtk, gtk). Excluded so `cargo build --workspace` stays buildable on headless/CI
# machines. Build it explicitly with `cargo tauri dev` from worker/crates/worker-app.
exclude = ["crates/worker-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-std", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
keyring = "3"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
sysinfo = "0.32"
directories = "5"
webbrowser = "1"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
